Bug 1988619 - Fix wrong font color for New Tab rectangle ad format when Settings and Add-ons themes conflict. r=home-newtab-reviewers,reemhamz
Differential Revision: https://phabricator.services.mozilla.com/D264876

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -516,13 +516,10 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
       padding-block: var(--space-medium);
 
       .title {
-        // Contrast fix for users who have wallpapers set
-        @include wallpaper-contrast-fix;
-
         text-transform: uppercase;
         font-size: var(--font-size-small);
         font-weight: var(--font-weight);
-        color: var(--newtab-contextual-text-secondary-color);
+        color: var(--newtab-text-secondary-color);
       }
 
       .excerpt {
@@ -561,7 +558,6 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
       }
 
       .meta {
-        z-index: 10;
         padding: var(--space-small) var(--space-large);
         padding-block-end: 0;
 
@@ -572,7 +568,6 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
       }
 
       .meta .title {
-        color-scheme: initial;
         text-transform: none;
       }
 
